# PolynomialEquations

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/polynomial_equations/: CMakeLists.txt  abstract_polynomial_equations.h  cubicequation.cpp  cubicequation.h  linerequation.cpp  linerequation.h  quadraticequation.cpp  quadraticequation.h  root.h
src/tests/: CMakeLists.txt  cub_ecqual.cxx  line_ecqual.cxx  quadr_ecqual.cxx  test.h
